# ai-rpc-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  batching_queue.cpp  batching_queue.h  export_model.py  inference_engine.cpp  inference_engine.h  test_batching.cpp  test_inference.cpp
include/: batching_queue.h  inference_engine.h  inference_service_impl.h  rpc_protocol.h  rpc_server.h  service_registry.h  zk_client.h
protos/: inference.proto
scripts/: export_model.py  stress_test.py
src/: batching_queue.cpp  inference_engine.cpp  inference_service_impl.cpp  main.cpp  rpc_protocol.cpp  rpc_server.cpp  service_registry.cpp  zk_client.cpp
tests/: test_batching.cpp  test_inference.cpp  test_rpc_client.cpp
